feat: swagger show
