# handler/response.go
@@ -22,6 +22,11 @@ type DeleteOpeningResponse struct {
 	Data    schemas.OpeningResponse `json:"data"`
 }
 
+type ShowOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
+
 func sendError(ctx *gin.Context, code int, msg string) {
 	ctx.Header("Content-Type", "application/json")
 	ctx.JSON(code, gin.H{
